Enhance web.config with security headers
Added security headers to the web.config file.

--- a/wwwroot/uploads/web.config
+++ b/wwwroot/uploads/web.config
@@ -12,16 +12,24 @@
     
     <!-- Configure MIME types for resume files -->
     <staticContent>
-<remove fileExtension=".pdf" />
+      <remove fileExtension=".pdf" />
       <mimeMap fileExtension=".pdf" mimeType="application/pdf" />
-    <remove fileExtension=".docx" />
+      <remove fileExtension=".docx" />
       <mimeMap fileExtension=".docx" mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document" />
     </staticContent>
+    
+    <!-- Security headers -->
+    <httpProtocol>
+      <customHeaders>
+        <add name="X-Frame-Options" value="DENY" />
+        <add name="X-Content-Type-Options" value="nosniff" />
+      </customHeaders>
+    </httpProtocol>
     
     <!-- Limit upload file size to 5MB -->
     <security>
       <requestFiltering>
-   <requestLimits maxAllowedContentLength="5242880" />
+        <requestLimits maxAllowedContentLength="5242880" />
       </requestFiltering>
     </security>
   </system.webServer>
