Fix comment formatting in web.config

--- a/wwwroot/uploads/web.config
+++ b/wwwroot/uploads/web.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.webServer>
-    <!-- Prevent execution of uploaded files -->
+    <!-- Prevent execution of uploaded files -->a
     <handlers>
       <clear />
       <add name="StaticFile" path="*" verb="*" 
